fix: content overflow of code-pattern.scss (#7093)
Fix bug of content overflow of code-pattern.scss component by adding a overflow: scroll property to .code-pattern__content class.

--- a/src/styles/components/_code-pattern.scss
+++ b/src/styles/components/_code-pattern.scss
@@ -26,6 +26,7 @@
 
   .code-pattern__assets {
     border: 1px solid $BORDER_COLOR;
+    overflow: scroll;
 
     @include bp(md) {
       max-width: 426px; // Fix width to prevent the grid blowout (in Chrome 93)
